--- a/home/include/footer.html
+++ b/home/include/footer.html
@@ -1,7 +1,52 @@
 <div class="footer-grid">
-	<strong class="logo"><img src="/gcart/home/resource/img/logo.svg" alt="과천문화재단"></strong>
-	<address class="address">
-		<span>경기도 과천시 통영로 5 과천시민회관 2층</span>
-		<span>Copyright ⓒ Gwacheon Foundation for Arts and Culture All Right Reserved.</span>
-	</address>
+	<div class="info">
+		<div class="links">
+			<span><a href="#">회사소개</a></span>
+			<span><a href="#">개인정보 취급방침</a></span>
+			<span><a href="#">이용약관</a></span>
+		</div>
+		<address class="address">
+			<span class="location">주소 : 20935 Northern Blvd. Suite #205, Bayside, NY 11361</span>
+			<span class="tel">대표전화 : 718-225-0104</span>
+			<span class="mail">메일 : ctsnynj@gmail.com</span>
+		</address>
+	</div>
+
+	<div class="app-area">
+		<strong class="title">CTS TV APP</strong>
+		<ul class="app-list">
+			<li>
+				<a href="#">
+					<img src="../resource/img/bi/app1.png" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="../resource/img/bi/app2.png" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="../resource/img/bi/app3.png" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="../resource/img/bi/app4.png" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="../resource/img/bi/app5.png" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="../resource/img/bi/app6.png" alt="">
+				</a>
+			</li>
+		</ul>
+	</div>
+
+	<span class="copy">Copyright ⓒ CTS뉴욕지사. All rights reserved.</span>
 </div>
