--- a/home/resource/css/component_resp.css
+++ b/home/resource/css/component_resp.css
@@ -8,20 +8,15 @@
 	.only-pc { display:none !important; }
 
 	/* layout */
-	.cont-grid { padding:80px 25px; }
+	.cont-grid { padding:35px 25px; }
 	.cont-inner { margin-top:45px; }
 
 	.btn-area { margin:25px 0 0; }
 
 	/* title */
-	.tit-sub { margin-bottom:5px; font-size:24px; }
-	.tit-d1 { font-size:50px; }
-	.tit-d2 { font-size:35px; }
-	.tit-d3 { font-size:25px; }
-	.tit-d4 { font-size:22px; }
-	.desc-d1 { font-size:20px; }
-	.desc-d2 { margin-top:10px; font-size:18px; word-break:keep-all; }
-	.desc-d1:before { margin:15px auto 25px; }
+	.tit-d1 { font-size:40px; }
+	.tit-d2 { font-size:20px; margin-bottom:20px; }
+	.tit-d3 { font-size:16px; margin-bottom:15px; }
 
 	.br { display:none; }
 
@@ -36,7 +31,9 @@
 	.tag-new { font-size:12px; }
 
 	/* header */
+	.is-home .header-area { height:170px; }
 	.header-area { height:70px; overflow:visible; }
+	.header-area .header-grid { height:70px; }
 	.header-area:after { top:68px; }
 	.header-area .gnb-area { float:none; position:fixed; padding:70px 0 0; margin:0; top:0; left:-100%; background:#fff; width:100%; height:100%; transition:all ease-in-out .35s; }
 	.header-area.open .gnb-area { left:0; }
@@ -84,11 +81,9 @@
 	.paging-fraction .current { color:#f79433; }
 
 	/* main : visual */
-	.visual-area { height:0; padding-top:40vh; }
-	.visual-area .visual-inner { position:absolute; top:0; left:0; width:100%; padding-top:70px; }
-	.visual-area .tit-area { margin-top:calc(20vh - 35px); transform:translateY(-50%); }
-	.visual-area.main { height:0; padding-top:55vh; }
+	.visual-area.main { margin-top:170px; height:45vh; }
 	.visual-area.main .tit-area { padding:0 30px; top:50%; transform:translateY(-50%); }
+	.visual-area .visual-inner { height:100%; }
 
 	.slider-pagination.type-num { bottom:5%; }
 	.slider-pagination.type-num a { font-size:16px; }
@@ -98,78 +93,26 @@
 	.article .btn-area.upper { top:28px; }
 	.article .tit-area.pdr-s > p { margin-right:-195px; }
 
-	/* main : business */
-	.cont-area.business { background:#ededed; }
-	.article .img-area { margin-top:25px; }
-	.link-list a { height:250px; }
-	.link-list a div { padding-top:28px; }
-	.link-list strong { max-width:111px; font-size:30px; }
-	.link-list strong i { flex:0 0 20px; letter-spacing:0; }
-	.link-list .col2 { max-width:84px; }
-	.link-list .col2 i { flex:0 0 29px; }
-	.link-list .txt { margin-top:20px; }
+	.program-cont .dim > span { font-size:15px; word-break:keep-all;}
+	.program-cont .dim .util { font-size:13px; }
+	.program-cont .inner strong {font-size:15px; }
+	.program-cont .inner span { font-size:13px; margin-top:5px; }
 
-	/* main : notice */
-	.bbs-list { padding:30px 25px; }
-	.bbs-list .category { width:15%; }
-	.bbs-list .date { width:15%; font-size:12px; }
+	.slider-news .card-item .inner strong,
+	.card-item .inner strong { font-size:15px; }
+	.card-item .inner .desc,
+	.card-item .inner strong i { font-size:13px; }
 
-	/* main : introduce */
-	.intro-list { min-width:0; max-width:100%; }
-	.intro-list > li:before { margin-bottom:10px; }
-	.intro-list .tit { font-size:20px; }
-	.intro-list .desc { font-size:16px; }
+	.bbs-list li a { font-size:15px; }
+	.article-item .thumb { float:none; width:100%; padding-top:56.8%; height:0; }
+	.article-item .desc { float:none; white-space:pre-wrap; max-height:2.8em; height:auto; display:-webkit-box; text-overflow:ellipsis; overflow:hidden; line-clamp:2; -webkit-line-clamp:2; -webkit-box-orient: vertical; line-height:1.4em; width:100%; margin:15px 0 0; padding:0; font-size:14px; line-height:1.4em; }
 
-	/* page : organization */
-	.organization-area { margin:-10px 0; }
-	.organization-area .item { padding:10px 0; }
-	.organization-area .item strong { font-size:18px; height:40px; line-height:40px; min-width:150px; padding:0 10px; }
-
-	/* page : intro */
-	.greeting-area .greeting-img { top:0; }
-	.greeting-inner { font-size:18px; }
-	.greeting-area .tit-d4 { margin-bottom:10px; }
-
-	.vision-area dt { padding:15px 30px 15px 0; }
-	.vision-area dd { padding:15px 0; }
-	.vision-area dt strong { height:80px; padding-top:10px; font-size:24px; }
-	.vision-area dt strong span { font-size:18px; }
-	.vision-area .vision span { height:120px; line-height:120px; font-size:24px; }
-	.vision-area .value span:before { font-size:30px; margin:0 4px; }
-	.vision-area .value strong { width:140px; height:140px; font-size:24px; padding-top:53px; }
-	
-	.notice-header { padding:25px; }
-	.notice-cont { padding:25px 25px 0; }
-
-	.map-info > li { padding:25px 25px 25px 90px; }
-	.map-info > li:before { top:20px; left:0; transform:scale(.8); }
+	.footer-area .info{ float:none; width:auto; }
+	.footer-area .app-area { float:none; margin-top:40px; white-space:normal; text-align:left;  }
+	.app-list > li {margin:10px 5px; zoom:0.8}
 }
 @media (max-width:765px) {
-	.link-list { margin:0 -1%; }
-	.link-list .link-visual { width:48%; margin:1%; }
-	.link-list .link-visual:first-child { margin:1%; }
-
-	.intro-list > li:first-child { margin-top:0; }
-	.intro-list > li { margin-top:25px; border:0; float:none; width:100%; }
-	.intro-list .btn-area { margin-top:15px; }
-
-	.organization-area .item strong { min-width:100px; }
 	
-	.article .btn-area.upper.col2 { position:static; margin-top:25px; text-align:center; }
-
-	.greeting-area { padding:0; }
-	.greeting-area .greeting-img { position:static; width:100%; text-align:left; margin-bottom:25px; }
-	.greeting-area .greeting-img img { width:200px; height:auto; }
-	.txt-sign { text-align:left; }
-	.greeting-inner { min-height:0; }
-
-	.vision-area > div { display:block; margin-top:40px; }
-	.vision-area > div:first-child { margin-top:0; }
-	.vision-area dt { display:block; width:100%; padding:0 0 20px; }
-	.vision-area dt strong { width:250px; margin:0 auto; }
-	.vision-area dd { display:block; width:100%; padding:0; }
-	.vision-area .vision span { height:auto; min-height:100px; line-height:1.4em; padding:40px 25px; font-size:20px; word-break:keep-all; line-height:1.7em; }
-	.vision-area .value strong { width:120px; height:120px; padding-top:48px; font-size:20px; }
 }
 
 /* mobile */
@@ -178,24 +121,37 @@
 	.tbl-base th,
 	.tbl-base td { font-size:14px; }
 
-	.cont-inner { margin-top:35px; }
+	/* .cont-inner { margin-top:35px; } */
 
-	.tit-sub { font-size:20px; }
+	/* .tit-sub { font-size:20px; }
 	.tit-d1 { font-size:35px; }
 	.tit-d2 { font-size:28px; }
 	.tit-d3 { font-size:24px; }
 	.tit-d4 { font-size:20px; }
 	.desc-d1 { font-size:18px; }
-	.desc-d2 { font-size:16px; margin-top:15px; }
+	.desc-d2 { font-size:16px; margin-top:15px; } */
+	.tit-d1 { font-size:26px; }
+	.tit-sub { font-size:20px; }
+	.slider-visual .slick-arrow { zoom:0.6}
 
 	.btn-base .ico-arr { margin-left:-2px; margin-right:-8px; }
 
-	.btn-base { font-size:14px; }
+	.btn-base, .btn-base.secondary { font-size:14px; }
+	.btn-base.size-xs { font-size:12px; margin-top:-7px; margin-left:5px; }
 	
 	p.bul-dot,
 	ul.bul-dot > li { font-size:14px; padding-left:10px; }
 	p.bul-dot:before, 
 	ul.bul-dot > li:before { width:3px; height:3px; margin:-2px 4px 0 -8px; }
+
+
+	.program-area { flex-wrap:wrap; }
+	.program-area .program-item { flex-basis:100%; width:100%; margin-top:35px; }
+	.program-area .program-item:first-child { margin-top:0; }
+	.program-cont .inner strong { height:auto; max-height:2.8em; }
+
+	.bbs-list > li { margin-top:10px; }
+	.article-item .desc { font-size:15px; }
 
 	.footer-area .footer-grid { display:block; }
 	.footer-area .logo { display:block; }
@@ -204,15 +160,6 @@
 	.link-list { margin:0; }
 	.link-list .link-visual { width:100%; margin:15px 0 0; }
 	.link-list .link-visual:first-child { margin:0; }
-
-	.bbs-list > li { position:relative; display:block; margin-top:25px; white-space:nowrap; padding-bottom:20px; }
-	.bbs-list > li:first-child { margin-top:0; }
-	.bbs-list .td { display:inline; padding:0; width:100%; }
-	.bbs-list .category { margin-bottom:5px; }
-	.bbs-list .category:before { content:"["; }
-	.bbs-list .category:after { content:"]"; }
-	.bbs-list .date { position:absolute; bottom:0; left:0; text-align:left; }
-	.bbs-list .subject a { max-width:calc(100% - 73px); }
 
 	.article { padding:0 0 25px; }
 	.article .tit-area { margin:60px 0 20px; }
