--- a/home/resource/css/component.css
+++ b/home/resource/css/component.css
@@ -378,6 +378,7 @@ ul.bul-dot > li { color:#454545; margin-top:8px; padding-left:16px; font-size:18
 	.user-info { display:none; }
 	
 	.header-area.hover { height:298px; background:#fff; box-shadow:0 5px 8px rgba(0,0,0,.1); }
+	.is-home .header-area.hover { height:398px; }
 	.header-area.hover .nav-d1 > li { color:#000; font-weight:400; }
 	.header-area.hover .nav-d2 { display:block; }
 }
