--- a/home/resource/css/component_resp.css
+++ b/home/resource/css/component_resp.css
@@ -31,11 +31,10 @@
 	.tag-new { font-size:12px; }
 
 	/* header */
-	.is-home .header-area { height:170px; }
+	.is-home .header-area { height:70px; }
 	.header-area { height:70px; overflow:visible; }
-	.header-area .header-grid { height:70px; }
 	.header-area:after { top:68px; }
-	.header-area .gnb-area { float:none; position:fixed; padding:70px 0 0; margin:0; top:0; left:-100%; background:#fff; width:100%; height:100%; transition:all ease-in-out .35s; }
+	.header-area .gnb-area { display:block; float:none; position:fixed; padding:70px 0 20px; margin:0; top:0; left:-100%; background:#fff; width:100%; height:100%; transition:all ease-in-out .35s; }
 	.header-area.open .gnb-area { left:0; }
 	.header-area.open:after { opacity:0; }
 	.header-area .logo { z-index:2; position:absolute; left:15px; top:50%; transform:translateY(-50%); margin:0; }
@@ -46,12 +45,16 @@
 	.header-area.open .btn-menu:before { transform:rotate(45deg); top:14px; left:2px; }
 	.header-area.open .btn-menu:after { transform:rotate(-45deg); top:14px; left:2px; }
 	.header-area.open .btn-menu span { width:0; }
-	.header-area.open .img-logo { display:none; }
-	.header-area.open .img-logo.dark { display:block; }
+
+	.header-util { position:static; flex:0 0 100%; display:block; padding:10px 15px 15px; border-top:1px solid #e8e7e7 }
+	.header-util > span { display:inline; }
+	.header-util > span + span:before { }
+
+	.banner-area { display:none; }
 
 	.logo img { width:130px; height:auto; }
-	.gnb-area a { display:block; height:50px; line-height:52px; padding:0 15px; border-bottom:1px solid #e8e7e7; overflow:hidden; }
-	.nav-d1 { height:100%; padding:0;overflow-y:auto; border-top:1px solid #8f8b8a; }
+	.gnb-area .nav-d1 a { display:block; height:50px; line-height:52px; padding:0 15px; border-bottom:1px solid #e8e7e7; overflow:hidden; }
+	.nav-d1 { flex:0 0 100%; height:calc(100% - 39px); padding:0;overflow-y:auto; border-top:1px solid #8f8b8a; }
 	.nav-d1 > li { display:block; margin:0; color:#000; font-size:20px; text-align:left; }
 	.nav-d1 > li > a:hover, 
 	.nav-d1 > li:hover > a,
@@ -60,7 +63,7 @@
 	.nav-d1 > li > a { position:relative; font-size:16px; font-weight:700; background:#f8f9fa; }
 	.nav-d1 > li > a:after { position:absolute; right:15px; top:15px; display:block; width:10px; height:10px; border-top:1px solid #454545; border-right:1px solid #454545; margin:2px 4px 0 0; transform:rotate(135deg); content:""; }
 	.nav-d1 > li > a:only-child:after { display:none; }
-	.nav-d1 > li.on > a { background:#0973BA; color:#fff; }
+	.nav-d1 > li.on > a { background:#507BD6; color:#fff; }
 	.nav-d1 > li.on > a:after { border-color:#fff; margin-top:8px; transform:rotate(-45deg); }
 	.nav-d2 { display:none; position:static; width:100%; margin:0; text-align:left; }
 	.nav-d1 > li.on .nav-d2 { display:block; }
@@ -81,7 +84,7 @@
 	.paging-fraction .current { color:#f79433; }
 
 	/* main : visual */
-	.visual-area.main { margin-top:170px; height:45vh; }
+	.visual-area.main { margin-top:70px; height:45vh; }
 	.visual-area.main .tit-area { padding:0 30px; top:50%; transform:translateY(-50%); }
 	.visual-area .visual-inner { height:100%; }
 
