--- a/home/resource/css/component_resp.css
+++ b/home/resource/css/component_resp.css
@@ -21,7 +21,7 @@
 	.br { display:none; }
 
 	/* button */
-	.btn-base { height:40px; padding:0 20px; line-height:40px; font-size:16px; }
+	.btn-base { height:40px; padding:0 20px; line-height:36px; }
 	.btn-close { width:40px; height:40px; }
 
 	/* icon */
